# droplet

./: CHANGELOG.md  Cargo.toml  README.md  droplet-server-main  meta-server
client/: Cargo.toml
core/: Cargo.toml
docs/: README.md  _sidebar.md  arch.md  background.md  idea.md  index.html
docs/modules/: core.md  meta_server.md  server.md  sinker.md
droplet-client/: Cargo.toml
droplet-client/src/: client.rs  gridbuffer_reader.rs  lib.rs
droplet-client/tests/: tests.rs
droplet-core/: Cargo.toml  build.rs
droplet-core/resources/: dsp_ctr_simple_features.config  gridbuffers_nohash_row_16_col_81_bitpacking4x.txt  simple_features_nohash_96.txt
droplet-core/src/: droplet.rs  feature_info.rs  grid_sample.rs  grpc_util.rs  id_mapping.rs  lib.rs  local_file_reader.rs  tool.rs  window_heap.rs
droplet-core/src/data_converter/: feature_converter.rs  grid_assembler.rs  mod.rs
droplet-core/src/db/: db.rs  feature.rs  meta_info.rs  mod.rs
droplet-core/src/proto/: meta.proto  service.proto
droplet-core/src/sql/: create_table.sql
droplet-core/tests/: tests.rs
droplet-meta-client/: Cargo.toml
droplet-meta-client/src/: client.rs
droplet-meta-client/tests/: tests.rs
droplet-meta-server/: Cargo.toml
droplet-meta-server/src/: lib.rs  request_handler.rs  tool.rs
droplet-meta-server/tests/: tests.rs
droplet-server/: Cargo.toml
droplet-server/src/: lib.rs  request_handler.rs  sample_saver.rs  tool.rs
droplet-sinker/: Cargo.toml
meta_server/: Cargo.toml
reader/: Cargo.toml
server/: Cargo.toml
sinker/: Cargo.toml
writer/: Cargo.toml
(+14 files in other folders)
